--- a/src/main/java/vue/ConnexionVue.form
+++ b/src/main/java/vue/ConnexionVue.form
@@ -206,7 +206,7 @@
                   <grid row="11" column="8" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <background color="-14139824"/>
+                  <background color="-1"/>
                   <foreground color="-14139824"/>
                   <text value="Se connecter"/>
                 </properties>
